trying to fix video on mobile

--- a/resources/style.scss
+++ b/resources/style.scss
@@ -240,6 +240,10 @@ nav {
 		margin-bottom: 3rem;
 	}
 
+	@media screen and (max-width: 990px) {
+		width: 100%;
+	}
+
 }
 
 .info-container-2 {
@@ -337,6 +341,10 @@ nav {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+
+	@media screen and (max-width: 990px) {
+		display:none;
+	}
 }
 
 // About/Contact 
@@ -393,13 +401,13 @@ nav {
 	display: flex;
 	align-items: center;
 	justify-content: flex-start;
-	height: 100%;
+	max-height: 100%;
 	width: auto;
 	margin-left: 4rem;
 
 	img {
 		border-radius: 50%;
-		height: 50%;
+		max-height: 50%;
 		width: auto;
 	}
 }
@@ -446,6 +454,10 @@ nav {
 	
 	h2 {
 		margin-top: 1rem;
+	}
+
+	a {
+		text-decoration: underline;
 	}
 }
 
